manifests/istio/ratelimiter/deployment-ratelimiter.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratelimit
  namespace: ratelimiter
  labels:
    app: ratelimit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratelimit
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ratelimit
        # sidecar.istio.io/inject: "false"
    spec:
      containers:
        - image: envoyproxy/ratelimit:8d6488ea # 01.25.2022 https://hub.docker.com/r/envoyproxy/ratelimit/tags
          imagePullPolicy: Always
          name: ratelimit
          command: ["/bin/ratelimit"]
          ports:
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 6070
          volumeMounts:
            - name: ratelimit-config-volume
              mountPath: /data/ratelimit/config
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 256Mi
        - image: prom/statsd-exporter:v0.18.0
          imagePullPolicy: Always
          name: statsd-exporter
          args:
            - "--statsd.mapping-config=/etc/statsd-exporter/conf.yaml"
            - "--log.level=debug"
          ports:
            - containerPort: 9125
            - containerPort: 9102
          volumeMounts:
            - name: statsd-config-volume
              mountPath: /etc/statsd-exporter
          resources:
            limits:
              cpu: 100m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 512Mi
      volumes:
        - name: ratelimit-config-volume
          configMap:
            name: ratelimit-config
        - name: statsd-config-volume
          configMap:
            name: statsd-config
