manifests/istio/ratelimiter/ratelimiter.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ratelimiter
  labels:
    istio-injection: enabled

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
  namespace: ratelimiter
spec:
  ports:
    - name: redis
      port: 6379
  selector:
    app: redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
  namespace: ratelimiter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        # sidecar.istio.io/inject: "false"
    spec:
      containers:
        - image: redis:6.2.6-bullseye
          imagePullPolicy: Always
          name: redis
          ports:
            - name: redis
              containerPort: 6379
          resources:
            limits:
              cpu: 300m
              memory: 512Mi
            requests:
              cpu: 300m
              memory: 512Mi
      restartPolicy: Always
      serviceAccountName: ""

---
apiVersion: v1
kind: Service
metadata:
  name: ratelimit
  labels:
    app: ratelimit
  namespace: ratelimiter
spec:
  ports:
    - name: http-port
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: grpc-port
      port: 8081
      targetPort: 8081
      protocol: TCP
    - name: http-debug
      port: 6070
      targetPort: 6070
      protocol: TCP
  selector:
    app: ratelimit

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratelimit
  namespace: ratelimiter
  labels:
    app: ratelimit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratelimit
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ratelimit
        # sidecar.istio.io/inject: "false"
    spec:
      containers:
        - image: envoyproxy/ratelimit:8d6488ea # 01.25.2022 https://hub.docker.com/r/envoyproxy/ratelimit/tags
          imagePullPolicy: Always
          name: ratelimit
          command: ["/bin/ratelimit"]
          ports:
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 6070
          volumeMounts:
            - name: ratelimit-config-volume
              mountPath: /data/ratelimit/config
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 256Mi
        - image: prom/statsd-exporter:v0.18.0
          imagePullPolicy: Always
          name: statsd-exporter
          args:
            - "--statsd.mapping-config=/etc/statsd-exporter/conf.yaml"
            - "--log.level=debug"
          ports:
            - containerPort: 9125
            - containerPort: 9102
          volumeMounts:
            - name: statsd-config-volume
              mountPath: /etc/statsd-exporter
          resources:
            limits:
              cpu: 100m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 512Mi
      volumes:
        - name: ratelimit-config-volume
          configMap:
            name: ratelimit-config
        - name: statsd-config-volume
          configMap:
            name: statsd-config
